--- a/Orchard_analysis_1.ipynb
+++ b/Orchard_analysis_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
        " 'sys']"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -906,13 +906,13 @@
    "source": [
     "# Get some of my friend's favorite places\n",
     "# He likes places that have \n",
-    "# an inspection score less than 10\n",
-    "# only a grade of A\n",
+    "# an inspection score less than 35\n",
+    "# only a grade of A or B\n",
     "# in recent gradings that are from 2016 and no earlier\n",
     "\n",
     "query= \"\"\"\n",
     "select \n",
-    "Businesses.CAMIS as CAMIS, \n",
+    "distinct Businesses.CAMIS as CAMIS, \n",
     "Businesses.DBA as NAME,\n",
     "Businesses.ZIPCODE,\n",
     "Businesses.PHONE,\n",
@@ -923,12 +923,11 @@
     "Businesses left join\n",
     "Inspections on Businesses.CAMIS = Inspections.CAMIS\n",
     "left join Gradings on Businesses.CAMIS = Gradings.CAMIS\n",
-    "where Inspections.score<15 \n",
-    "&& Gradings.grade= 'A' \n",
+    "where Inspections.score<35\n",
+    "&& (Gradings.grade= 'B' or Gradings.grade='A')\n",
     "&& Gradings.grade_date >'2015-12-31'\n",
     "&& locate('thai', Businesses.CUISINE_DESCRIPTION)>0\n",
     "\n",
-    "order by Gradings.grade_date DESC\n",
     "limit 10\n",
     "\"\"\"\n",
     "favorites_table = pd.read_sql_query(query,engine)"
@@ -936,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -961,135 +960,135 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>41545732</td>\n",
-       "      <td>LEMONGRASS GRILL</td>\n",
-       "      <td>11201</td>\n",
-       "      <td>7185229728</td>\n",
+       "      <td>41720477</td>\n",
+       "      <td>AROY DEE THAI KITCHEN</td>\n",
+       "      <td>10038</td>\n",
+       "      <td>2125289922</td>\n",
        "      <td>Thai</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2016-10-13</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2016-03-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>41632888</td>\n",
-       "      <td>RIDGEWOOD AUTHENTIC THAI KITCHEN</td>\n",
-       "      <td>11385</td>\n",
-       "      <td>7184187717</td>\n",
+       "      <td>41193976</td>\n",
+       "      <td>THAI ELEPHANT RESTAURANT</td>\n",
+       "      <td>11105</td>\n",
+       "      <td>7182048827</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-10-11</td>\n",
+       "      <td>2016-04-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>41632888</td>\n",
-       "      <td>RIDGEWOOD AUTHENTIC THAI KITCHEN</td>\n",
-       "      <td>11385</td>\n",
-       "      <td>7184187717</td>\n",
+       "      <td>41288951</td>\n",
+       "      <td>HI THAI</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>2126777624</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-10-11</td>\n",
+       "      <td>2016-04-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>41632888</td>\n",
-       "      <td>RIDGEWOOD AUTHENTIC THAI KITCHEN</td>\n",
-       "      <td>11385</td>\n",
-       "      <td>7184187717</td>\n",
+       "      <td>41547536</td>\n",
+       "      <td>MINT'S THAI KITCHEN</td>\n",
+       "      <td>11375</td>\n",
+       "      <td>7182681470</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-10-11</td>\n",
+       "      <td>2016-06-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>50000055</td>\n",
-       "      <td>BANKOK CUISINE</td>\n",
-       "      <td>11375</td>\n",
-       "      <td>7182614005</td>\n",
+       "      <td>41180852</td>\n",
+       "      <td>BANGKOK TASTY</td>\n",
+       "      <td>11105</td>\n",
+       "      <td>7185458203</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-10-11</td>\n",
+       "      <td>2016-04-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>41275701</td>\n",
-       "      <td>TO BE THAI</td>\n",
-       "      <td>11218</td>\n",
-       "      <td>7184350459</td>\n",
+       "      <td>41163809</td>\n",
+       "      <td>LUCKY THAILAND KITCHEN</td>\n",
+       "      <td>11421</td>\n",
+       "      <td>7188474700</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-22</td>\n",
+       "      <td>2016-03-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>41275701</td>\n",
-       "      <td>TO BE THAI</td>\n",
-       "      <td>11218</td>\n",
-       "      <td>7184350459</td>\n",
+       "      <td>40972155</td>\n",
+       "      <td>CHAI THAI RESTAURANT</td>\n",
+       "      <td>11249</td>\n",
+       "      <td>7185995889</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-22</td>\n",
+       "      <td>2016-07-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>41556098</td>\n",
-       "      <td>UDOM THAI</td>\n",
-       "      <td>11238</td>\n",
-       "      <td>7186228424</td>\n",
+       "      <td>41634218</td>\n",
+       "      <td>TUE THAI FOOD</td>\n",
+       "      <td>10014</td>\n",
+       "      <td>2129299888</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-20</td>\n",
+       "      <td>2016-06-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>41556098</td>\n",
-       "      <td>UDOM THAI</td>\n",
-       "      <td>11238</td>\n",
-       "      <td>7186228424</td>\n",
+       "      <td>40396267</td>\n",
+       "      <td>ARHARN THAI CUISINE</td>\n",
+       "      <td>11106</td>\n",
+       "      <td>7187285563</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-20</td>\n",
+       "      <td>2016-02-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>50049845</td>\n",
-       "      <td>THAI POCHANA</td>\n",
-       "      <td>11374</td>\n",
-       "      <td>7188971575</td>\n",
+       "      <td>41462643</td>\n",
+       "      <td>OBAO</td>\n",
+       "      <td>10022</td>\n",
+       "      <td>2123085588</td>\n",
        "      <td>Thai</td>\n",
        "      <td>A</td>\n",
-       "      <td>2016-09-12</td>\n",
+       "      <td>2016-05-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CAMIS                              NAME  ZIPCODE       PHONE  \\\n",
-       "0  41545732                  LEMONGRASS GRILL    11201  7185229728   \n",
-       "1  41632888  RIDGEWOOD AUTHENTIC THAI KITCHEN    11385  7184187717   \n",
-       "2  41632888  RIDGEWOOD AUTHENTIC THAI KITCHEN    11385  7184187717   \n",
-       "3  41632888  RIDGEWOOD AUTHENTIC THAI KITCHEN    11385  7184187717   \n",
-       "4  50000055                    BANKOK CUISINE    11375  7182614005   \n",
-       "5  41275701                        TO BE THAI    11218  7184350459   \n",
-       "6  41275701                        TO BE THAI    11218  7184350459   \n",
-       "7  41556098                         UDOM THAI    11238  7186228424   \n",
-       "8  41556098                         UDOM THAI    11238  7186228424   \n",
-       "9  50049845                      THAI POCHANA    11374  7188971575   \n",
+       "      CAMIS                      NAME  ZIPCODE       PHONE  \\\n",
+       "0  41720477     AROY DEE THAI KITCHEN    10038  2125289922   \n",
+       "1  41193976  THAI ELEPHANT RESTAURANT    11105  7182048827   \n",
+       "2  41288951                   HI THAI    10002  2126777624   \n",
+       "3  41547536       MINT'S THAI KITCHEN    11375  7182681470   \n",
+       "4  41180852             BANGKOK TASTY    11105  7185458203   \n",
+       "5  41163809    LUCKY THAILAND KITCHEN    11421  7188474700   \n",
+       "6  40972155      CHAI THAI RESTAURANT    11249  7185995889   \n",
+       "7  41634218             TUE THAI FOOD    10014  2129299888   \n",
+       "8  40396267       ARHARN THAI CUISINE    11106  7187285563   \n",
+       "9  41462643                      OBAO    10022  2123085588   \n",
        "\n",
        "  CUISINE_DESCRIPTION Grade  Grade Date  \n",
-       "0                Thai     A  2016-10-13  \n",
-       "1                Thai     A  2016-10-11  \n",
-       "2                Thai     A  2016-10-11  \n",
-       "3                Thai     A  2016-10-11  \n",
-       "4                Thai     A  2016-10-11  \n",
-       "5                Thai     A  2016-09-22  \n",
-       "6                Thai     A  2016-09-22  \n",
-       "7                Thai     A  2016-09-20  \n",
-       "8                Thai     A  2016-09-20  \n",
-       "9                Thai     A  2016-09-12  "
+       "0                Thai     B  2016-03-31  \n",
+       "1                Thai     A  2016-04-20  \n",
+       "2                Thai     A  2016-04-14  \n",
+       "3                Thai     A  2016-06-29  \n",
+       "4                Thai     A  2016-04-07  \n",
+       "5                Thai     A  2016-03-02  \n",
+       "6                Thai     A  2016-07-18  \n",
+       "7                Thai     A  2016-06-15  \n",
+       "8                Thai     A  2016-02-03  \n",
+       "9                Thai     A  2016-05-25  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
